<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <EditText
        android:id="@+id/EditNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/EditIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idade"
        android:inputType="number" />

    <Button
        android:id="@+id/AddGato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/AddGato" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="70dp" >

        <Button
            android:id="@+id/ApreGatos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ApreGatos" />

        <Button
            android:id="@+id/ApagarGatos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ApagarGatos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingTop="130dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ngatos" 
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ngatos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0" 
            android:textSize="20sp" />
        	
    </LinearLayout>
 </LinearLayout>